--- a/Prac_06/KivyDemos-master/box_layout.kv
+++ b/Prac_06/KivyDemos-master/box_layout.kv
@@ -2,8 +2,15 @@ BoxLayout:
     orientation: 'vertical'
 #    orientation: 'horizontal'
     Button:
-        text: 'one'
+        text: 'clear'
+        on_press:app.clear_all()
+    TextInput:
+    id: input_name
+    text: ''
     Button:
-        text: 'two'
-    Button:
-        text: 'three'
+        text: 'greet'
+        on_press: app.handle_greet()
+    Label:
+        id: output_label
+        text: 'Enter your name'
+        color: (1, 1, 0 ,1)
